--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,25 @@
+.swiper {
+    width: 100vw;
+    height: 90vh;
+    background: #ECEFF7;
+    
+}
 
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+   
+    
+
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* 
+.swiper-slide img {
+    display: block; */
+    /* width: 100%;
+    height: 100%;
+    object-fit: cover; */
+/* } */ 
